[package]
name = "key-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fips205 = { version = "0.4.1" }
aes-gcm = { version = "0.10.3", features = ["aes", "zeroize"] }
hex = "0.4.3"
scrypt = { version = "0.11.0", default-features = false }
wasm-bindgen = "0.2.100"
zeroize = "1.8.1"
getrandom = { version = "0.2.15", features = ["js"] }
bip39 = { version = "2.1.0", features = ["zeroize"] }
web-sys = { version = "0.3.77", features = ["console"] }
indexed_db_futures = "0.6.0"
serde = { version = "1.0.218", features = ["derive"] }
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
rand_chacha = "0.3.1"
ckb-fips205-utils = { path = "../quantum-resistant-lock-script/crates/ckb-fips205-utils", features = ["signing", "ckb-mock-tx-types"] }
serde_json = "1.0.140"
ckb-mock-tx-types = "0.200.0"
